--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,12 @@
       <version>4.1.0</version>
     </dependency>
 
+    <!--<dependency>-->
+      <!--<groupId>com.github.pagehelper</groupId>-->
+      <!--<artifactId>pagehelper-spring-boot-starter</artifactId>-->
+      <!--<version>1.2.5</version>-->
+    <!--</dependency>-->
+
     <dependency>
       <groupId>com.github.miemiedev</groupId>
       <artifactId>mybatis-paginator</artifactId>
